SDK 1.6.0
git-svn-id: http://googleappengine.googlecode.com/svn/trunk/java@219 80f5ef21-4148-0410-bacc-cfb02402ada8