@@ -50,8 +50,8 @@ public class DatastoreCounterShard {
   public DatastoreCounterShard(String counterName, int shardNumber,
       int count) {
     this.counterName = counterName;
-    this.shardNumber = new Integer(shardNumber);
-    this.count = new Integer(count);
+    this.shardNumber = Integer.valueOf(shardNumber);
+    this.count = Integer.valueOf(count);
   }
 
   public Long getId() {
@@ -75,6 +75,6 @@ public class DatastoreCounterShard {
   }
 
   public void increment(int amount) {
-    count = new Integer(count.intValue() + amount);
+    count = Integer.valueOf(count.intValue() + amount);
   }
 }
